Made page peeling based on CSS
Made the peeking option more based on CSS by removing references to
width() and letting the elements size themselves. Thank you
StackOverflow!

--- a/src/css/metro-select.css
+++ b/src/css/metro-select.css
@@ -1,7 +1,13 @@
+.inner-selector {
+    display: inline-block;
+    white-space: nowrap;
+}
 .sel-opt {
     cursor: pointer;
     opacity: 0.5;
+    margin-right: 5%;
     -webkit-transition: opacity .25s linear;
+    display: inline;
 }
 .sel-active {
     opacity: 1;
